--- a/css/box-model.css
+++ b/css/box-model.css
@@ -1,1 +1,13 @@
 html { background-color: salmon; }
+
+#box-model {
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  padding: 60px;
+  border-top: 60px solid red;
+  border-right: 60px solid blue;
+  border-bottom: 60px solid yellow;
+  border-left: 60px solid green;
+  margin: 60px;
+}
