--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,19 @@ p:nth-of-type(3) img {
 /* Tablet. */
 @media screen and ( min-width: 800px ) {
   html { background-color: #aaaaaa; }
+
+  /* Horizontal Navigation */
+  nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+  }
+
+  nav li a {
+    display: block;
+    padding: 0.5rem 1.5rem;
+    background-color: rgb( 0, 100, 0 );
+  }
 }
 
 /* Large tablet / small laptop. */
