--- a/css/flex.css
+++ b/css/flex.css
@@ -69,6 +69,24 @@ header nav {
  * Now targeting tablets and larger...
  */
 @media screen and ( min-width: 600px ) {
-
-  
+  main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  main section,
+  main article,
+  main form {
+    width: 100%;
+  }
+  /* "Service 1" */
+  main section:nth-of-type(2),
+  /* "Service 2" */
+  main section:nth-of-type(3),
+  /* "Additional" */
+  main article,
+  /* "Contact Us" */
+  main form {
+    width: 50%;
+  }
 }
