Get rid of some extraneous selections in flex.css.

--- a/css/flex.css
+++ b/css/flex.css
@@ -74,9 +74,7 @@ header nav {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  main section,
-  main article,
-  main form {
+  main section {
     width: 100%;
   }
   /* "Service 1" */
